renamed files to lowercase kebab case and fixed functionality for stuff

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -1,11 +1,20 @@
 {
     "LANGUAGE": "Nederlands",
     "TITLE": "Welcome to Flightbooker",
-    "SEARCH_FLIGHT": "Search a flight",
+    "SEARCH_FLIGHT": "Search for a flight",
     "CHOOSE_LANGUAGE": "Choose language",
     "FROM": "From",
     "TO": "To",
     "PRICE": "Price",
     "DATE": "Date",
-    "SEATS_LEFT": "Seats left"
+    "SEATS_LEFT": "Seats left",
+    "BOOK_FLIGHT": "Book this flight",
+    "CANCEL_BOOKING": "Cancel my booking",
+    "FIRST_NAME": "First name",
+    "LAST_NAME": "Last name",
+    "TAP_TO_SAVE": "Tap to save",
+    "FILL_ALL_FIELDS": "Please fill in all fields",
+    "SURE_CANCEL_BOOKING": "Are you sure you want to cancel your booking?",
+    "YES": "Yes",
+    "NO": "No"
 }
